[package]
name = "mightybadger-rocket"
description = "Honeybadger Notifier for Rust, middleware for Rocket"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

homepage = "https://github.com/qnighy/mightybadger-rs"
repository = "https://github.com/qnighy/mightybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger", "rocket"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
async-trait = "0.1.42"
rocket = { version = "0.5.0-dev", default-features = false }
mightybadger = { git = "https://github.com/qnighy/mightybadger-rs.git", rev = "36157ad" }

[dev-dependencies]
tokio = "1.7.1"

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "9671115" }
